Update 'faa4uti3p-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:6dea6b4ef99b08310472edf49f71450e999b73f0@sha256:55c5f57b4681c8596864886a25788b084d823fed917e2c31e87326036cd91e0a

--- a/components/faa4uti3p-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/faa4uti3p-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: faa4uti3p-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:6dea6b4ef99b08310472edf49f71450e999b73f0@sha256:55c5f57b4681c8596864886a25788b084d823fed917e2c31e87326036cd91e0a
+          name: container-image
